<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/opening_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bbffffff"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivTeru1"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:contentDescription="@string/panel_disc"
            android:scaleType="centerInside"
            android:background="@drawable/teruteru" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0pt"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="17pt" />

        <ImageView
            android:id="@+id/ivTeru2"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:contentDescription="@string/panel_disc"
            android:scaleType="centerInside"
            android:background="@drawable/teruteru" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvExplain"
        android:background="#d0ffffff"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/tv_explain" />

    <Button
        android:id="@+id/btHowTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opening_button"
        android:text="@string/btHowTo"
        android:textSize="13pt"
        android:layout_marginHorizontal="10pt"
        android:layout_marginVertical="5pt"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opening_button"
        android:layout_marginHorizontal="10pt"
        android:layout_marginVertical="5pt"
        android:text="@string/btEasy"
        android:textSize="13pt"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opening_button"
        android:layout_marginHorizontal="10pt"
        android:layout_marginVertical="5pt"
        android:text="@string/btNormal"
        android:textSize="13pt"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10pt"
        android:layout_marginVertical="5pt"
        android:background="@drawable/opening_button"
        android:text="@string/btHard"
        android:textColor="#ffffff"
        android:textSize="13pt" />

</LinearLayout>